# rust_data_engineering

./: README.md
data_cleaning/: Cargo.toml  README.md  example_2.csv  example_csv.csv
data_cleaning/src/: main.rs
test_data_generation/: Cargo.toml  README.md  example.csv
test_data_generation/src/: main.rs
