[package]
name = "test_data_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.8.0", features = ["derive", "chrono"] }
rand = { version = "0.8.5"}
chrono = {version = "0.4.31"}
io = {version = "0.0.2"}
csv = {version = "1.2.2"}
serde = {version = "1.0.188", features = ["derive"]}